Добавлена аутентификация через sanctum
