# app/Http/Requests/Token/CreateRequest.php
@@ -1,0 +1,41 @@
+<?php
+
+namespace App\Http\Requests\Token;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class CreateRequest extends FormRequest
+{
+    protected $stopOnFirstFailure = false;
+
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules(): array
+    {
+        return [
+            'email' => 'required|string|exists:users',
+            'password' => 'required|string|min:10'
+        ];
+    }
+
+    public function messages(): array
+    {
+        return [
+            'required' => 'Поле ":attribute" должно присутствовать',
+            'string' => 'Поле ":attribute" должно быть строкой',
+            'exists' => 'Поле ":attribute" должно существовать',
+            'min' => 'Длинна поля ":attribute" должна быть больше :min',
+        ];
+    }
+}
